2007-06-13  Dalibor Topic  <robilad@kaffe.org>

	* test/awt/WidgetsDemo/WidgetsDemo.java (itemStateChanged): Fixed jikes warning.

2007-06-11  Dalibor Topic  <robilad@kaffe.org>

	* WHATSNEW: Updated.

2007-06-11  Dalibor Topic  <robilad@kaffe.org>

	* THIRDPARTY: Added m4/classpath.m4.

2007-06-11  Dalibor Topic  <robilad@kaffe.org>

	Added support for using an existing GNU Classpath installation.

	* m4/classpath.m4: Taken from Cacao, slightly adapted.

	* Makefile.am (BUILD_ENVIRONMENT-make): Add the installed GNU Classpath 
	libraries to the KAFFELIBRARPATH.

	* configure.ac: Added support for using an existing GNU Classpath installation.
	Set GLIBJ_ZIP according to the class library used.

	* developers/autogen.sh: Removed fastjar-related parts.

	* kaffe/scripts/kaffe.in (KAFFELIBRARYPATH): Add the installed GNU Classpath 
        libraries.

	* libraries/javalib/Makefile.am (USE_SYSTEM_CLASSPATH): Added section to 
	handle an existing GNU Classpath installation.

	* test/internal/Makefile.am (LIBNATIVE): Set according to the source of native
	class library code.

	* test/regression/TestScript.in (JAVA_COMPILER): Use GLIBJ_ZIP.

2007-06-08  Dalibor Topic  <robilad@kaffe.org>

	* FAQ/FAQ.requiredlibraries: Documented zlib & jar tool requirements.

	Reported by:  Kiyo Inaba <inaba@src.ricoh.co.jp>

2007-06-07  Dalibor Topic  <robilad@kaffe.org>

	* FAQ/FAQ.automake: Documented use of gettext 0.16.1.

	* Makefile.am (SUBDIRS, DIST_SUBDIRS): Removed external.

	* configure.ac: Removed support for built-in 
	fastjar and zip library.

	* developers/autogen.sh: Updated to use gettext 0.16.1.

	* external/.cvsignore,
	external/Makefile.am,
	external/Makefile.in,
	external/gcc/.cvsignore,
	external/gcc/Makefile.am,
	external/gcc/Makefile.in,
	external/gcc/fastjar/.cvsignore,
	external/gcc/fastjar/AUTHORS,
	external/gcc/fastjar/CHANGES,
	external/gcc/fastjar/COPYING,
	external/gcc/fastjar/ChangeLog,
	external/gcc/fastjar/INSTALL,
	external/gcc/fastjar/Makefile.am,