@@ -1,5 +1,9 @@
 2007-06-13  Dalibor Topic  <robilad@kaffe.org>
 
+	* test/regression/ProcessClassInst.java: Simplified.
+
+2007-06-13  Dalibor Topic  <robilad@kaffe.org>
+
 	* test/awt/WidgetsDemo/WidgetsDemo.java (itemStateChanged): Fixed jikes warning.
 
 2007-06-11  Dalibor Topic  <robilad@kaffe.org>
